<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/schedule"
        app:showAsAction="always"
        android:title="@string/schedule"
        android:icon="@drawable/ic_today" />

    <item
        android:id="@+id/deadline"
        app:showAsAction="always"
        android:title="@string/deadline"
        android:icon="@drawable/ic_alarm" />

    <item
        android:id="@+id/state"
        app:showAsAction="always"
        android:title="@string/state"
        android:icon="@drawable/ic_flag" />

    <item
        android:id="@+id/toggle_state"
        app:showAsAction="always"
        android:title="@string/done"
        android:icon="@drawable/ic_check_circle_outline" />

    <item
        android:id="@+id/focus"
        app:showAsAction="always"
        android:title="@string/open"
        android:icon="@drawable/ic_center_focus_strong" />

</menu>
