...
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_period">Agenda days</string>
    <string name="time">Time</string>
    <string name="repeater">Repeater</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
...
