<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    style="@style/CoordinatorLayoutFitsSystemWindows">

    <ViewFlipper
        android:id="@+id/activity_repos_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:paddingBottom="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:padding="@dimen/screen_edge">

                <TextView
                    style="@style/BigCenteredText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/space_between_content_areas"
                    android:text="@string/create_new_repository_for_syncing" />

                <Button
                    android:id="@+id/activity_repos_dropbox"
                    style="@style/Button.ReposRepo"
                    app:icon="@drawable/cic_dropbox"
                    android:text="@string/dropbox" />

                <Button
                    android:id="@+id/activity_repos_git"
                    style="@style/Button.ReposRepo"
                    app:icon="@drawable/cic_git"
                    android:text="@string/git" />

                <Button
                    android:id="@+id/activity_repos_webdav"
                    style="@style/Button.ReposRepo"
                    app:icon="@drawable/ic_cloud_outline"
                    android:text="@string/webdav" />

                <Button
                    android:id="@+id/activity_repos_directory"
                    style="@style/Button.ReposRepo"
                    app:icon="@drawable/ic_folder_open"
                    android:text="@string/directory" />

            </LinearLayout>

        </ScrollView>

    </ViewFlipper>

    <!-- Top toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            app:title="@string/repositories"
            style="@style/TopToolbar"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>