...
                android:id="@+id/activity_repo_directory_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_repo_directory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/directory_uri" />
            </com.google.android.material.textfield.TextInputLayout>
...
            style="@style/TopToolbar"
            app:navigationIcon="@drawable/ic_arrow_back"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        style="@style/Fab.Done" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

