<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ListViewItem"
    android:orientation="horizontal">

    <!--<ImageView-->
    <!--style="@style/BookItemInfoIcon"-->
    <!--android:src="@drawable/oic_repo_item"-->
    <!--android:contentDescription="@string/repo_url"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--/>-->

    <TextView
        android:id="@+id/item_repo_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/repo_url_sample"
        android:textSize="?attr/item_repo_text_size"
        android:layout_gravity="center_vertical"/>

</LinearLayout>
